<resources>
    <string name="app_name">MyBellClient</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_sound">Sound</string>

    <string name="btn_sos">Help</string>
    <string name="btn_wc">WC</string>
    <string name="btn_food">Food</string>
    <string name="btn_water">Water</string>
    <string name="btn_pill">Pills</string>
    <string name="btn_other">Other</string>

    <string name="dialog_title_alert">Attention</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_settings">SETTINGS</string>
    <string name="dialog_button_cancel">CANCEL</string>
    <string name="dialog_msg_server_ipport">Entering the address and the port of the control unit</string>
    <string name="dialog_msg_client_nickname">Entering the nickname</string>

    <string name="setting_server_ip">Server IP</string>
    <string name="setting_server_port">Server PORT</string>
    <string name="setting_nickname">Nickname</string>

</resources>