<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:weightSum="2"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/home_btn_sos"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/btn_sos"
                    android:layout_weight="0.5"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:background="@color/white"
                    android:tooltipText="@string/btn_sos"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/home_btn_wc"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:layout_weight="0.5"
                    android:src="@drawable/btn_wc"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:background="@color/white"
                    android:tooltipText="@string/btn_wc"/>
            </RelativeLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:weightSum="2"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/home_btn_food"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/btn_food"
                    android:layout_weight="0.5"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:background="@color/white"
                    android:tooltipText="@string/btn_food"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/home_btn_water"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:layout_weight="0.5"
                    android:src="@drawable/btn_water"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:background="@color/white"
                    android:tooltipText="@string/btn_water"/>
            </RelativeLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:weightSum="2"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/home_btn_pill"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:layout_weight="0.5"
                    android:src="@drawable/btn_pill"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:background="@color/white"
                    android:tooltipText="@string/btn_pill"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/home_btn_more"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:layout_weight="0.5"
                    android:src="@drawable/btn_more"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:background="@color/white"
                    android:tooltipText="@string/btn_other"/>
            </RelativeLayout>
       </TableRow>

     </TableLayout>
</LinearLayout>